# xviz

./: .babelrc  .eslintignore  .eslintrc  .gitattributes  .gitignore  .gitmodules  .nycrc  .prettierignore  .prettierrc  .uber.json  CHANGELOG.md  CREDITS.md  Dockerfile  Dockerfile.server  Dockerfile.test  LICENSE  Parsing-type-notes.txt  README.md  aliases.js  aws.sh  babel.config.js  cleanup-notes.txt  docker-compose.buildkite-1-override.yml  docker-compose.test.yml  docker-compose.yml  lerna.json  ocular-dev-tools.config.js  package.json  prototool.yaml  run-kitti.sh  webpack.config.js
.buildkite/: pipeline.yml
cpp/: .gitignore  CMakeLists.txt  LICENSE.md  README.md  TODO.md
cpp/cmake/: CMakeLists.txt
cpp/cmake/examples/: CMakeLists.txt
cpp/cmake/src/: CMakeLists.txt
cpp/cmake/test/: CMakeLists.txt  code_coverage.cmake
cpp/examples/: example.cpp  example_xviz_server.cpp
cpp/pb/: annotation.proto  core.proto  declarativeui.proto  envelope.proto  options.proto  primitives.proto  session.proto  style.proto  uiprimitives.proto
cpp/src/: message.cpp
cpp/test/: test_all.cpp  test_builder.hpp  test_message.hpp  test_metadata.h  test_server.h  test_update.h  test_utils.cpp  test_utils.h  test_writer.hpp
dev-docs/: 003-io-module-rfc.md  004-server-module-rfc.md  005-ros-module-rfc.md  007-transforms-rfc.md  bundle-rfc.md
dev-docs/rfcs/: 0002-persistent-stream-flag.md
docs/: CHANGELOG.md  README.md  STYLE_GUIDE.md  whats-new.md
docs/api-reference/: glb-loader.md  parse-xviz.md  stream-synchronizer.md  trajectory-helpers.md  xviz-builder.md  xviz-configuration.md  xviz-loader.md  xviz-log-slice.md  xviz-metadata-builder.md  xviz-object-collection.md  xviz-object.md  xviz-stream-buffer.md  xviz-style-parser.md  xviz-stylesheet.md  xviz-synchronizer.md  xviz-trajectory-helper.md  xviz-ui-builder.md  xviz-validator.md  xviz-writer.md
docs/declarative-ui/: components.md  interactions.md  layout-elements.md  layout-types.md  overview.md
docs/developers-guide/: README.md  generating-xviz.md  installing-xviz.md  parsing-xviz.md  serving-xviz.md  structure-of-xviz.md  styling-xviz.md  using-declarative-ui.md  using-xviz-in-other-languages.md  validating-xviz.md
docs/getting-started/: README.md  convert-data-to-xviz.md  convert-structure.md  downloading-kitti-data.md  mapping-camera.md  mapping-generated-data.md  mapping-lidar.md  mapping-objects.md  mapping-vehicle-data.md  overview.md  running-the-example.md  xviz-server.md
docs/overview/: concepts.md  conventions.md  related.md  roadmap.md  ros-comparison.md  versioning.md
docs/protocol-formats/: binary-protocol.md  json-protocol.md  protobuf-protocol.md
docs/protocol-schema/: core-protocol.md  core-types.md  declarative-ui.md  geometry-primitives.md  introduction.md  panel-specification.md  session-protocol.md  style-specification.md  ui-primitives.md
docs/rfcs/: 0001-client-conformance-tests.md
docs/xviz-tool/: README.md  dump.md  validate.md
examples/server/: README.md  args.js  index.js  package.json  scenario-circle.js  scenario-straight.js  scenarios.js  serve.js  xviz-serve-data.js
flow-typed/: globals.js
flow-typed/npm/: enzyme_v3.x.x.js  puppeteer_v1.2.x.js
ide/: .dir-locals.el
modules/: stream_set.json
modules/builder/: README.md  package.json
modules/cli/: README.md  package.json
modules/io/: README.md  node.js  package.json
modules/parser/: README.md  package.json
modules/ros/: README.md  package.json
modules/schema/: README.md  build-schema.js  envelope.schema.json  genimports.js  make-ts-inmemory.mjs  make-ts.mjs  package.json  primitive_state.schema.json  vehicle-pose.json
modules/server/: README.md  package.json
modules/tool/: package.json
python/: .gitignore  .pylintrc  LICENSE  README.md  guidance_setup.sh  requirements.txt  setup.py  setup.sh  test.py
python/docs/: protocol.md  release.md
python/examples/: guidance_sim.py  plot_radar.py  plot_speed_thresholds.py  serve_scenarios.py  serve_scenarios_raven.py  simulate_control.py  write_scenario.py
python/test/: test_builder.py  test_declarative_builder.py  test_io.py  test_metadata_builder.py  test_ui_builder.py
python/xviz/: __init__.py  message.py  pyproject.toml
python/xviz_avs/: _version.py  message.py
schema/: validate.js
schema/examples/: primitive_state.json
scripts/: add-copyright.sh  bootstrap.sh  build.sh  check-copyright-header.sh  copyright-header.txt  download-kitti-data.sh  file-utils.js  git-copyright-files.sh  lint.sh  publish.sh  run-kitti-example.sh  test.sh  unpm-publish.sh
src/: constants.js  index.js
src/loaders/: test.js
src/objects/: base-object.js  xviz-object-collection.js
src/parsers/: filter-vertices.js  parse-etl-stream.js  parse-log-metadata.js  parse-stream-data-message.js  parse-vehicle-pose.js  parse-xviz-primitive.js  parse-xviz-v1.js  serialize.js
src/styles/: stylesheet.js  xviz-style-parser.js  xviz-style-property.js
src/synchronizers/: log-slice.js  stream-synchronizer.js  xviz-stream-buffer.js
src/utils/: assert.js  worker-utils.js
src/workers/: lidar-point-cloud-worker.js  stream-data-worker.js
test/: browser.js  index.js  start.js  webpack.config.js  website.js
test/bench/: browser.js  index.js  parse-stream-message.bench.js  xviz-stream-buffer.bench.js  xviz.bench.js
test/data/: geometry-primitives.json  meter-trajectory-duplicates.json  minimal-metadata.glb  minimal-metadata.js  minimal-state-update.glb  minimal-state-update.js  sample-frame-futures-v1.json  sample-metadata-message-v1.json  sample-metadata-message.json  sample-vehicle-log.json  sample-vehicle-pose.json  sample-xviz.json  xviz-stream.js  xviz-style-sheet.json
test/modules/: update-test-cases.js
test/size/: import-nothing.js
test/util/: deep-equals-tolerance.js  deep-equals-tolerance.spec.js  diff-deep-equals.js  index.js
tmp-data/: 0-frame.json  1-frame.foo  1-frame.json  2-frame.glb  3-frame.glb  4-frame.glb
website/: html.config.js  package.json  pages.json
website/src/: config.js  demos.js  mdRoutes.js
xviz/v2/: core.proto  panel.proto  session.proto  (+3 more)
(+1171 files in other folders)
